Update main task for playbook

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,2 +1,26 @@
 ---
 # tasks file for ansible-letsencrypt
+
+- name: Install certbot on server
+  become: yes
+  get_url:
+    url: https://dl.eff.org/certbot-auto
+    dest: "{{ letsencrypt_path }}/certbot-auto"
+    mode: 0777
+
+- name: Generate certificates
+  become: yes
+  shell: "{{ lookup('template', '../templates/certbot_certonly') }}"
+  args:
+    creates: /etc/letsencrypt/live/{{ letsencrypt_domains[0] }}
+  when: letsencrypt_domains | length > 0
+  ignore_errors: yes
+
+- name: Setuo  auto renew
+  become: yes
+  cron:
+    name: "Letsencrypt renewal"
+    job: "{{ letsencrypt_path }}/certbot-auto renew --quiet --no-self-upgrade"
+    state: "{{ letsencrypt_renew | ternary('present', 'absent') }}"
+    minute: "{{ 59 | random }}"
+    hour: "{{ 11 | random }}/12"
