--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ install:
   - pip install ansible==1.9.1
 
 script:
-  - ansible-playbook -i tests/inventory example-playbook/playbook.yml --syntax-check
+  - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
