--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,83 @@
+Skip to content
+Search or jump to…
+
+Pull requests
+Issues
+Marketplace
+Explore
+ 
+@spy86 
+spy86
+/
+ansible-nginx
+1
+00
+Code
+Issues
+Pull requests
+Actions
+Projects
+Wiki
+Security
+Insights
+Settings
+ansible-nginx/.travis.yml
+@spy86
+spy86 Update .travis.yml
+Latest commit 62f0507 9 minutes ago
+ History
+ 1 contributor
+40 lines (34 sloc)  967 Bytes
+  
 ---
+sudo: required
+dist: bionic
 
 language: python
 python: "2.7"
 
+# Doc: https://docs.travis-ci.com/user/customizing-the-build#Build-Matrix
+env:
+  - ANSIBLE_VERSION=latest
+  - ANSIBLE_VERSION=2.2.2.0
+  - ANSIBLE_VERSION=2.2.1.0
+  - ANSIBLE_VERSION=2.2.0.0
+  - ANSIBLE_VERSION=2.1.5
+  - ANSIBLE_VERSION=2.1.4
+  - ANSIBLE_VERSION=2.1.3
+  - ANSIBLE_VERSION=2.1.2
+  - ANSIBLE_VERSION=2.1.1.0
+  - ANSIBLE_VERSION=2.1.0.0
+  - ANSIBLE_VERSION=2.0.2.0
+  - ANSIBLE_VERSION=2.0.1.0
+  - ANSIBLE_VERSION=2.0.0.2
+  - ANSIBLE_VERSION=2.0.0.1
+  - ANSIBLE_VERSION=2.0.0.0
+
+branches:
+  only:
+    - master
+
 before_install:
   - sudo apt-get update -qq
-  - sudo apt-get install -qq python-apt
 
 install:
-  - pip install ansible==1.9.1
+  # Install Ansible.
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible; else pip install ansible==$ANSIBLE_VERSION; fi
+  - if [ "$ANSIBLE_VERSION" = "latest" ]; then pip install ansible-lint; fi
 
 script:
-  - ansible-playbook -i tests/inventory tests/test.yml --syntax-check
+  # Check the role/playbook's syntax.
+  - ansible-playbook -i tests/inventory nginx.yaml --syntax-check
+© 2021 GitHub, Inc.
+Terms
+Privacy
+Security
+Status
+Docs
+Contact GitHub
+Pricing
+API
+Training
+Blog
+About
